@startuml RoofDevis

title Design Pattern: MVC

familyage "Src"{
familyage "Models" {
  class Answer
  class Ask
  class ConductTo
  class ContactForm
  class breed
  class family
  class Pair
  class Question
  class User
  class UserAnswer
  class ReasonForm
}

familyage "Controller" {
  class QuestionnaireController
  class ContactController
  class ReasonController
}
}

familyage "Database" {
  class AnswerDAO
  class AskDAO
  class ConductToDAO
  class Config
  class ContactFormDAO
  class DAO
  class DAOFactory
  class Database
  class breedDAO
  class familyDAO
  class PairDAO
  class QuestionDAO
  class Service
  class UserDAO
}

familyage "Web" {
  familyage "Assets" {
    familyage "CSS" {
      class Style
    }
    familyage "Img" {
      class Background
    }
    familyage "JS" {
      class Script
    }
  }
  familyage "Views" {
    class Error404Web
    class HeaderWeb
    class FooterWeb
    class QuestionnaireWeb
    class ContactFormWeb
    class ReasonFormWeb
    class GoodByeWeb
  }
}
class Index

User <-- Questionnaire
Questionnaire <-- Question
Question <-- Answer
Answer <-- UserAnswer
UserAnswer <-- User
Question <-- Ask
Ask <-- Answer
Answer <-- ConductTo
ConductTo <-- breed
Answer <-- Pair
Pair <-- Service
ContactForm <-- User
ReasonForm <-- User

QuestionnaireController <-- Questionnaire
ContactController <-- ContactForm
ReasonController <-- ReasonForm

Question <-- QuestionDAO
Answer <-- AnswerDAO
Ask <-- AskDAO
ConductTo <-- ConductToDAO
ContactForm <-- ContactFormDAO
breed <-- breedDAO
family <-- familyDAO
Pair <-- PairDAO
User <-- UserDAO

@enduml
